
2007-12-02  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: A normal version number is _not_ a beta version:
	make 0.10.14.5 sort after 0.10.14, not before, for gst-plugins-base.

2007-11-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Add on the team pages hyperlinks to the PO files.

2007-11-07  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/whydisclaim.html: Remove paragraph about non-existent PDF;
	suggested by Karl Berry.

2007-10-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/htmlpage.py: Add a transform_authors() function to process
	the AUTHORS file into a simple HTML list of names and dates.

2007-10-14  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Allow team leaders to upload PO files for any domain.

	* bin/po-register: Show in the subject line the name of the actual
	last translator instead of the assigned translator.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Clarify things when team has no leader.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Reject PO files that don't contain a correct
	PO-Revision-Date field.  Don't make long comments about an
	incorrect POT-Creation-Date, but simply restore it.

2007-09-17  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Differentiate the background colour for packages
	depending on whether they require a disclaimer.

2007-09-15  Benno Schulenberg  <benno@vertaalt.nl>

	* tools/find-common-messages.sh: New tool, that finds
	messages that are worth including in a compendium.

	* tools/make-package-links.sh, tools/process-disclaimers.py:
	Add copyright lines.

2007-09-02  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register, bin/tp-robot: "TP-robot" in Subject line is no
	longer required.  Show in notification mails to team lists either
	the URLs of updated HTML pages or the URL of the new tarball.

2007-08-25  Benno Schulenberg  <benno@vertaalt.nl>
