@@ -1,4 +1,8 @@
 
+2007-12-07  Benno Schulenberg  <benno@vertaalt.nl>
+
+	* bin/run-queue.sh: Exit immediately if there is no robot queue.
+
 2007-12-02  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/registry.py: A normal version number is _not_ a beta version:
